tests-snapshots/dbc-cantools/issue_199_extended.snap.stderr
error[E0425]: cannot find type `GearShifterGearShifter` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:941:35
     |
 941 |     pub fn gear_shifter(&self) -> GearShifterGearShifter {
     |                                   ^^^^^^^^^^^^^^^^^^^^^^ help: an enum with a similar name exists: `GearShifterLeftBlinker`
...
1056 | pub enum GearShifterLeftBlinker {
     | ------------------------------- similarly named enum `GearShifterLeftBlinker` defined here

error[E0425]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1954:37
     |
1954 |     pub fn cruise_buttons(&self) -> CruiseButtonsCruiseButtons {
     |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`
...
2168 | pub enum CruiseButtons2LkaGapButton {
     | ----------------------------------- similarly named enum `CruiseButtons2LkaGapButton` defined here

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:944:18
    |
944 |             3 => GearShifterGearShifter::Park,
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:945:18
    |
945 |             0 => GearShifterGearShifter::DriveLow,
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `GearShifterGearShifter`
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:946:18
    |
946 |             _ => GearShifterGearShifter::_Other(self.gear_shifter_raw()),
    |                  ^^^^^^^^^^^^^^^^^^^^^^
    |                  |
    |                  use of undeclared type `GearShifterGearShifter`
    |                  help: an enum with a similar name exists: `GearShifterLeftBlinker`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1957:18
     |
1957 |             6 => CruiseButtonsCruiseButtons::Cancel,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1958:18
     |
1958 |             5 => CruiseButtonsCruiseButtons::Main,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1959:18
     |
1959 |             3 => CruiseButtonsCruiseButtons::Set,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1960:18
     |
1960 |             2 => CruiseButtonsCruiseButtons::Resume,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1961:18
     |
1961 |             1 => CruiseButtonsCruiseButtons::None,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error[E0433]: failed to resolve: use of undeclared type `CruiseButtonsCruiseButtons`
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1962:18
     |
1962 |             _ => CruiseButtonsCruiseButtons::_Other(self.cruise_buttons_raw()),
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |                  |
     |                  use of undeclared type `CruiseButtonsCruiseButtons`
     |                  help: an enum with a similar name exists: `CruiseButtons2LkaGapButton`

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:69:13
   |
65 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
69 |             SteeringWheelAngle::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
   = note: `-D unreachable-patterns` implied by `-D warnings`
   = help: to override `-D warnings` add `#[allow(unreachable_patterns)]`

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:72:13
   |
66 |             BlinkerStatus::MESSAGE_ID => {
   |             ------------------------- matches all the relevant values
...
72 |             GearShifter::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:78:13
   |
65 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
78 |             BrakePedal::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:84:13
   |
65 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
84 |             VehicleSpeed::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:87:13
   |
81 |             WheelSpeed::MESSAGE_ID => {
   |             ---------------------- matches all the relevant values
...
87 |             CruiseButtons::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
